add actual bucket name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       
-      - run: aws s3 sync dist/ s3://YOUR-BUCKET-NAME --delete
+      - run: aws s3 sync dist/ s3://flocc-examples --delete
